# STM32_CMake_Example

./: .clang-format  .gitignore  CMakeLists.txt  Clang-Format_Configuration_Explained_(Gemini).txt  LICENSE  README.md  startup_stm32f429zitx.s
Application/Include/: fpu.h  reg_util.h  sysclock.h
Application/Source/: fpu.c  main.c
Project/01_Application/SWC_Controller/Include/: swc_controller.h
Project/01_Application/SWC_Controller/Source/: swc_controller.c
Project/03_Middleware/BSP/STM32F429ZI/: board.c
Project/03_Middleware/BSP/STM32F429ZI/startup/: startup_stm32f429zitx.s
Project/03_Middleware/BSP/USART/Include/: usart3_bsp.h
Project/03_Middleware/BSP/USART/Source/: usart3_bsp.c
Project/04_MCAL/FPU/Include/: fpu.h
Project/04_MCAL/FPU/Source/: fpu.c
Project/04_MCAL/GPIO/Source/: gpio.c
Project/04_MCAL/NVIC/Include/: nvic.h
Project/04_MCAL/SysCfgCtrl/Include/: syscfgctrl.h
Project/04_MCAL/SysCfgCtrl/Source/: syscfgctrl.c
Project/04_MCAL/USART/Include/: usart.h
Project/04_MCAL/USART/Source/: usart.c
Project/Application/SWC_Controller/Include/: controller.h
Project/Application/SWC_Controller/Source/: controller.c
Project/Board/STM32F429ZI/: board.c
Project/Board/STM32F429ZI/startup/: startup_stm32f429zitx.s
Project/Config/USART/Include/: usart3_config.h
Project/Config/USART/Source/: usart3_config.c
Project/MCAL/FPU/Include/: fpu.h
Project/MCAL/FPU/Source/: fpu.c
Project/MCAL/GPIO/Include/: gpio.h
Project/MCAL/GPIO/Source/: gpio.c
Project/MCAL/NVIC/Source/: nvic.c
Project/MCAL/SysCfgCtrl/Include/: syscfgctrl.h
Project/MCAL/SysCfgCtrl/Source/: syscfgctrl.c
Project/MCAL/SystemClock/Include/: sysclock.h
Project/MCAL/SystemClock/Source/: sysclock.c
Project/MCAL/USART/Include/: usart.h
Project/MCAL/USART/Source/: usart.c
Project/Utilities/Include/: platform_types.h  reg_util.h
Project/YY_Utilities/Include/: compiler.h  std_types.h
Templates/Include/: template_header.h
Templates/Source/: template_source.c
Tests/UnitTest/: test_example.c
Tests/UnitTest/mock/: stm32f4xx.h
cmake/: arm-none-eabi-toolchain.cmake  unit_tests.cmake
tests/: CMakeLists.txt
